--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,77 @@
-.header-container {
+#root {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
   background-color: #E1F2D5;
+}
+
+.header-container {
+  background-color: #034422;
   height: 100px;
+  width: 100%;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
 }
 
 .header-container img {
-  width: 150px;
-  height: 40px;
+  width: 200px;
 }
 
 .header-title {
   font-size: 2.5rem;
+  color: white;
+}
+
+label {
+  display: flex;
+  flex-flow: column nowrap;
+  width: 350px;
+  margin: 10px auto;
+  font-weight: 600;
+  font-size: 1.2rem;
+  color: white;
+}
+
+label input {
+  padding: 15px;
+  font-size: 1.2rem;
+  margin: 10px;
+  border-radius: 10px;
+  border: none;
+}
+
+form {
+  background-color: #034422;
+  padding: 20px;
+  width: 500px;
+  margin: auto;
+  border-radius: 10px;
+  box-shadow: 5px 5px 10px black;
+}
+
+button {
+  padding: 15px 25px;
+  font-size: 1.2rem;
+  font-weight: 600;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  background-color: #1EB720;
+  color: white;
+  margin: 20px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.37);
+}
+
+button:hover {
+  background-color: #13c816b9;
+}
+
+button:disabled,
+button[disabled] {
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
 }
