--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 #root {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
+  min-height: 100vh;
+  max-height: max-content;
   display: flex;
   flex-flow: column nowrap;
   background-color: #E1F2D5;
@@ -74,4 +76,32 @@ button[disabled] {
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* height: 100vh; */
+  /* min-height: 100vh; */
+  max-height: max-content;
+  width: 100%;
+  /* background-color: red; */
+}
+
+section {
+  display: flex;
+  flex-flow: row wrap;
+
+  justify-content: center;
+  align-items: center;
+  /* background-color: blue; */
+  width: 100%;
+  margin: 50px;
+}
+
+li {
+  margin: 20px;
+  list-style: none;
 }
