--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ form {
   background-color: #034422;
   padding: 20px;
   width: 500px;
-  margin: auto;
+  margin: 50px auto;
   border-radius: 10px;
   box-shadow: 5px 5px 10px black;
 }
@@ -89,13 +89,8 @@ main {
 section {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   width: 100%;
   margin: 50px;
-}
-
-li {
-  margin: 20px;
-  list-style: none;
 }
